# python-template-scaffolder

./: .gitignore  README.md  scaffold.py
ai-fullstack-starter/: Makefile  README.md  docker-compose.yml
ai-fullstack-starter/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ai-fullstack-starter/backend/app/: main.py
ai-fullstack-starter/backend/app/api/routes/: health.py  search.py
ai-fullstack-starter/backend/app/api/schemas/: llm.py  search.py
ai-fullstack-starter/backend/app/clients/: wikipedia_client.py
ai-fullstack-starter/backend/app/core/: __init__.py  protocols.py
ai-fullstack-starter/backend/app/orchestration/: jsonplaceholder_orchestrator.py  search_orchestrator.py
ai-fullstack-starter/backend/app/services/: llm_service.py  search_service.py
ai-fullstack-starter/backend/app/services/llm/: __init__.py  base.py  factory.py  openai_provider.py
ai-fullstack-starter/frontend/: package.json
ai-fullstack-starter/frontend/app/: layout.tsx  page.tsx
layered-stack-app/: README.md  docker-compose.yml
layered-stack-app/backend/: .env.example  README.md  pyproject.toml
layered-stack-app/frontend/: package.json
manifest-demo/: .env.example  .gitignore  README.md  docker-compose.yml
manifest-demo/.scaffold/: manifest.json
manifest-demo/backend/: README.md  pyproject.toml
manifest-demo/frontend/: package.json
templates/fullstack-app/: README.md.tmpl  docker-compose.yml.tmpl
templates/python-app/: .env.example.tmpl  .gitignore.tmpl  Makefile.tmpl  README.md.tmpl  pyproject.toml.tmpl
(+36 files in other folders)
